# ldns

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  BSDmakefile.in  BUILD.svn  CMakeLists.txt  COMPILE  Changelog  CodingStyle  LICENSE  Makefile  Makefile.in  ProgrammingPhilosophy  README  README-Travis.md  README-parser  README-snapshots  README.NSEC3  README.git  README.snapshots  README.svn  ROADMAP  ReleaseChecklist  SHOWSTOPPERS  TODO  TODO-DOCS  aclocal.m4  acx_nlnetlabs.m4  acx_python.m4  buf.h  buffer.c  chaos.c  common.h.in  compiletest.c  config.cmake  configure.ac  cpuinfo.c  dane.c  dname.c  (+69 more)
.github/workflows/: testsuite.yml
cga-gen/: cga-gen.py
cga-gen/scapy6send/: cert.py  ecc.py  scapy.py  scapy6-teredo.py  scapy6.py  x509.py
compat/: b32_ntop.c  b32_pton.c  b64_ntop.c  b64_pton.c  fake-rfc2553.c  fake-rfc2553.h  gettimeofday.c  gmtime_r.c  inet_aton.c  inet_ntop.c  inet_pton.c  isascii.c  memmove.c  snprintf.c  timegm.c
contrib/: ADNS.readme.txt
contrib/android/: bootstrap_ldns.sh  install_openssl.sh  install_tools.sh  setenv_android.sh
contrib/ios/: install_tools.sh
contrib/ldnsx/: README  ldnsx.py
contrib/python/: Changelog  Makefile  ldns.i  ldns_dname.i  ldns_key.i  ldns_packet.i  (+4 more)
doc/: API-header.xml  API.xml  CodingStyle  LDNS_API  Makefile.manpages  PacketTypes  README-snapshots  TODO  compression  design.dox  dnssec-tutorial.docbook  doxyparse.pl  example_dig.c  function_manpages  header.html  index.html  key2ds.1  keygen.1  ldns-chaos.1  ldns-key2ds.1  ldns-keygen.1  ldns-signzone.1  ldns-update.1  ldns_api  libdns.css  make-xml-from-dox.pl  mx.1  overview  overview.docbook  overview.dox  tutorial  tutorial.docbook  tutorial1_mx.dox  tutorial1_mx.doxygen  tutorial3_signzone.dox  x52.html
drill/: ChangeLog  ChangeLog.22-nov-2005  Makefile.in  README  TODO  chasetrace.c  configure.ac  dnssec.c  drill.1  drill.1.in  drill.c  drill.h  drill.h.in  drill_util.c  drill_util.h  error.c  root.c  screen.c  securetrace.c  tracelogic-olddrill.c  work.c
examples/: Makefile.in  README  README.pcat  configure.ac  dpa.1  dpa.c  ldns-cat-pcap.c  ldns-cgatsig-ns.c  ldns-cgatsig-query.c  ldns-chaos.c  ldns-compare-zones.1  ldns-compare-zones.c  ldns-dane.1  ldns-dane.1.in  ldns-dane.c  ldns-dpa.1  ldns-dpa.c  ldns-duration.c  ldns-duration.h  ldns-fake-server.c  ldns-gen-zone.1  ldns-gen-zone.c  ldns-ixfr.c  ldns-key2ds.1  ldns-key2ds.c  ldns-keyfetcher.1  ldns-keyfetcher.c  ldns-keygen.1  ldns-keygen.c  ldns-mx.c  ldns-notify.1  ldns-notify.c  ldns-nsec3-hash.c  ldns-pcap-drill.c  ldns-pcat-diff.c  ldns-pcat-print.c  ldns-pcat.c  ldns-read-zone.1  ldns-read-zone.c  ldns-resolver.c  (+33 more)
examples/nsd-test/: Makefile.in  configure.ac  ldns-testns.c  nsd-ldnsd.c  nsec3-covers.c  test.queries
ldns/: .c-mode-rc.el  buffer.h  common.h  common.h.in  cpuinfo.h  dane.h  dname.h  dns.h  dnssec.h  dnssec_nsec4.h  dnssec_sign.h  dnssec_verify.h  dnssec_zone.h  edns.h  error.h  higher.h  host2str.h  host2wire.h  keys.h  ldns.h  net.h  net.h.in  packet.h  parse.h  radix.h  rbtree.h  rdata.h  resolver.h  rr.h  rr_functions.h  sha1.h  sha2.h  str2host.h  tsig.h  update.h  util.h.in  wire2host.h  zone.h
lua/: Makefile.in  README  configure.ac  echo.lua  lua-rns.c  lua-todo  lua.c  rdf.lua  rns-lib.lua  rns-specs  rns.lua  test.lua  test2.lua
masterdont/: Makefile  README  backtext.c  backtext.h  config.h  config_file.c  config_file.h  main.c  makefile.dep  process.c  process.h  server.c  server.h  store.c  store.h  zinfo.c  zinfo.h  zones.c  zones.h
packaging/: ldns-config.1  ldns-config.in  libldns.pc.in
pcat/: Makefile.in  README.pcat  config.h.in  configure.ac  getdelim.c  pcat-diff.1  pcat-diff.c  pcat-grep.pl  pcat-print.1  pcat-print.c  pcat.1  pcat.c  todo
test/: 01-checkout.tpkg  01-compile.tpkg  02-lint.tpkg  03-run.tpkg  04-run-normal.tpkg  05-iana-rr-types.tpkg  05-nm.tpkg  06-drill-lint.tpkg  07-compile-examples.tpkg  08-zonereader.tpkg  09-doc-check.tpkg  10-older-test.tpkg  11-examples-lint.tpkg  12-unit-tests-dnssec.tpkg  12.unit-tests-dnssec.tpkg  13-manpage-check.tpkg  13-unit-tests-base.tpkg  14-drill-random.tpkg  14-read-zone.tpkg  14-unit-tests-base.tpkg  15-unit-tests-rrtypes.tpkg  15.unit-tests-rrtypes.tpkg  16-compile-builddir.tpkg  17-stub-resolver.tpkg  18-drill-tests1.tpkg  19-keygen.tpkg  19.unit-tests-rrtypes.tpkg  20-sign-zone.tpkg  30-load-pyldns.tpkg  31-load-pyldnsx.tpkg  32-unbound-1.4.18-regression.tpkg  32-unbound-1.4.20-regression.tpkg  32-unbound-regression.tpkg  33-test-unbound-latest.tpkg  33-wget-compile-test-unbound-latest.tpkg  60-compile-builddir.tpkg  99-cleanup.tpkg  999-compile-nossl.tpkg  TODO  codingstyle.tpkg  (+12 more)
tests/: Kmiek.nl.+001+63054.key  Kmiek.nl.+001+63054.private  Makefile.in  configure.ac  db.miek.nl  dname-label-test.c  lua-rns.c  lua-todo  notify.c  reverse-pkt.lua  rns.lua  rrsig-test.c  run-test-read-zone.c  run-test0.c  run-test11.c  run-test18.c  run-test19.c  run-test20.c  run-test21.c  run-test7.c  serial.c  server.c
trunk/: CodingStyle  Kdnssec.nl.+005+32820.private  Makefile  Makefile.in  README  README-parser  README-snapshots  SHOWSTOPPERS  TODO  buffer.c  chaos.c  configure.ac  dname.c  dnssec.c  error.c  higher.c  host2str.c  host2wire.c  keys.c  libdns.doxygen  libdns.vim  main.c  mx.c  net.c  packet.c  packet.h  packetdump.txt  parse.c  prototype.h  rdata.c  rdata.h  resolver.c  rr.c  rr.h  rr_functions.c  run-test0.c  run-test1.c  run-test10.c  run-test11.c  run-test13.c  (+18 more)
trunk/compat/: b64_ntop.c
trunk/doc/: API-footer.xml  API.xml  LDNS_API  Makefile  doxyparse.pl  function_manpages  ldns-man.tmpl  ldns_api_packet  ldns_api_rr  make-xml-from-dox.pl  overview  overview.docbook  tutorial  tutorial.docbook
trunk/ldns/: buffer.h  common.h  dname.h  dns.h  dnssec.h  error.h  higher.h  host2str.h  host2wire.h  keys.h  ldns.h  net.h  packet.h  parse.h  rdata.h  resolver.h  rr.h  rr_functions.h  str2host.h  util.h  wire2host.h
trunk/test/: run-test1.c  run-test12.c  run-test2.c  run-test8.c  run-test9.c
trunk/tests/: COMPILE  Makefile.in  run-test18.c  run-test20.c  run-test7.c
(+190 files in other folders)
